tests/fixtures/invalid/pow_set_str_none.py
# Cannot call pow() with Set[int], Str, None
x = pow({1, 2, 3}, "hello", None)
